# project_wizard

./: .env.example  .gitignore  AI_BUILD_SUMMARY.txt  CHANGELOG.md  CLEANUP_SUMMARY.md  CRITIQUE_FIX.md  DEVELOPMENT_SUMMARY.md  ISSUES.md  Makefile  PROJECT_CHARTER.md  PROJECT_PLAN.md  README.md  SESSION_SUMMARY.md  STATUS.md  V2_IMPROVEMENTS_NEEDED.md  WARP.md  app.py  app_streamlit.py  app_streamlit_v2.py  app_v2_5.py  app_v3.py  charter_view.html  demo_ai_agents.py  pyproject.toml  requirements.txt  run_v2_5.sh  run_web.py  setup.py
app/: config.py  main.py
app/components/: document_editor.py
app/configs/: enhancement_prompts.json
app/models/: blueprint.py  charter.py  database.py  issue.py  phase_state.py  planning.py  proforma.py
app/parsers/: issues_parser.py
app/services/: best_practices_manager.py  blueprint_registry.py  database.py  document_generator.py  document_registry.py  issue_manager.py  openproject_exporter.py  pattern_pipeline.py  pattern_registry.py  phase_manager.py  phase_navigator.py  proforma_calculator.py  project_context.py  project_registry.py  project_scaffolder.py  repo_bootstrapper.py
app/state/: session_manager.py
app/ui/: __init__.py  pattern_form.py  project_selector.py  sidebar.py
app/utils/: constants.py  document_utils.py  parsers.py
app/wizard/: phase1_initiation.py  phase2_planning.py
configs/: .env.example  ai_config.yaml  config.yaml  enhancement_prompts.json
docs/: BLUEPRINT_IMPLEMENTATION_GUIDE.md  BLUEPRINT_SCHEMA.md  CHANGELOG.md  DEPLOYMENT.md  FORMAT_STRING_FIX.md  HALLUCINATION_PREVENTION.md  ISSUES.md  KANBAN_DESIGN.md  LOGSEQ_INTEGRATION.md  OPENPROJECT_INTEGRATION.md  PATTERN_SYSTEM.md  PHASE1_COMPLETION.md  PHASE2_COMPLETION.md  PHASE2_KICKOFF.md  PROJECT_PLAN.md  QUICKSTART_AI.md  QUICK_START.md  RPG_FRAMEWORK_GUIDE.md  RPG_IMPLEMENTATION_SUMMARY.md  SECTION_AGENT_FIX.md  SERVICE_INFO.md  SPRINT_2.1_COMPLETE.md  SPRINT_2.2_COMPLETE.md  SPRINT_2.3_COMPLETE.md  TASK_1.3.4_COMPLETION.md  WORKFLOW_REDESIGN.md
docs/archive/: AFTER_BILLING_ENABLED.md  BEST_PRACTICES_COMPLETE.md  BEST_PRACTICES_IMPLEMENTATION.md  BEST_PRACTICES_INTEGRATION.md  BEST_PRACTICES_README.md  BUG_FIXES.md  CHANGES_MANIFEST.md  Cardiac_ICU_Metrics_CONCISE.md  GUIDED_REFINEMENT_GUIDE.md  HFW_Proposal_Final.md  HFW_Renegotiation_Charter.md  HFW_Renegotiation_Proposal_Complete.md  HFW_Renegotiation_Proposal_Fixed.md  HFW_Renegotiation_Proposal_Formatted.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_COMPLETE.md  NOTE_TYPES_UPDATE.md  PRODUCTIVITY_PULSE_SUMMARY.md  PROFORMA_ENHANCEMENTS.md  QUICKSTART.md  QUICK_START_REFINEMENT.md  SECTION_AGENT_INTEGRATION.md  SESSION_SUMMARY.md  SYSTEM_OVERVIEW.md  SYSTEM_REVIEW.md  TASK_AND_PURPOSE_FRAMEWORK.md  TESTING_RUBRIC.md  TESTING_RUBRIC_PROPOSAL.md  V2_IMPLEMENTATION_COMPLETE.md  WEDDING_CHARTER_TEMPLATE.md  WORK_SUMMARY_2025-12-04.md  app_v2_5.py  run_v3.sh  run_webapp.sh  test_5w1h_pipeline.py  test_openai.py  test_output.md
docs/version_docs/: AI_AGENTS_README.md  V2_README.md  (+3 more)
migrations/: add_proforma_tables.py
patterns/: PROPOSAL_TYPE_SELECTOR.md  README.md
scripts/: README_OPENPROJECT.md  export_to_openproject.py
tests/: test_blueprint_models.py  test_blueprint_registry.py  test_cli_templates.py  test_data_analysis.py  test_integration_blueprints.py  test_phase1_integration.py  test_view_route.py  test_white_paper.py
web/: app.py
(+156 files in other folders)
