[project]
name = "project-wizard"
version = "0.2.0"
description = "Interactive project management wizard for OpenProject"
authors = [{name = "Jonathan Ives"}]
requires-python = ">=3.8"

[tool.ruff]
# Use Python 3.8 as the minimum version
target-version = "py38"

# Line length (Black default is 88)
line-length = 88

# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function call in argument defaults
]

# Exclude directories
exclude = [
    ".git",
    "__pycache__",
    "venv",
    "env",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.mccabe]
# Maximum cyclomatic complexity
max-complexity = 10

[tool.ruff.isort]
# Use single line for imports
force-single-line = false

[tool.ruff.per-file-ignores]
# Ignore specific rules in test files
"tests/**/*.py" = ["S101"]  # Allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
